--- a/css/main.css
+++ b/css/main.css
@@ -41,16 +41,21 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center left;
-  background-color: rgba(120,207,245,0.3);*/
-  width: 100%;
-  height: 100vh;
-  overflow: hidden; }
+  background-color: rgba(120,207,245,0.3);
+  overflow:hidden;
+  */ }
+
+.intro-header {
+  position: absolute; }
 
 .img {
   background-image: url(../images/finished-city-wh-back.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   position: absolute;
   width: 100%;
-  height: 100vh; }
+  height: 100vh;
+  bottom: 0; }
 
 canvas {
   background: #000;
@@ -70,7 +75,8 @@ canvas {
 .intro-header h1 {
   display: inline-block;
   font-size: 55px;
-  font-family: "Abril Fatface", "serif"; }
+  font-family: "Abril Fatface", "serif";
+  text-shadow: 3px 3px rgba(0, 0, 0, 0.3); }
 
 /******+++++++++++++++++++++++VARIABLES***++++++++++++++++++***/
 .structure-left, .middle-structure {
@@ -83,6 +89,9 @@ canvas {
 
 /******+++++++++++++++++++++++SLIDER***++++++++++++++++++***/
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
+* {
+  outline: 1px solid rgba(0, 255, 0, 0.3); }
+
 .navbar-gr img {
   width: 150px;
   height: 100px; }
@@ -217,7 +226,7 @@ section {
   background: rgba(114, 128, 178, 0.5);
   color: #000; }
 
-.projects_left, .projects_right {
+._projects_total {
   background: rgba(114, 128, 178, 0.9); }
 
 /*.middle-structure-right{
@@ -242,12 +251,8 @@ section {
     margin-top: 0;
     }
 }*/
-.projects {
-  color: #000; }
-  .projects li {
-    padding: 30px 0; }
-  .projects li:hover {
-    background: rgba(69, 60, 179, 0.3); }
+.linea_projects {
+  width: 50%; }
 
 .img-projects-github {
   margin: 25px; }
@@ -284,12 +289,19 @@ section {
     width: 80px;
     height: 80px; }
 
-  .logo-programs {
+  .logo_programs {
     padding: 0; } }
-@media (max-width: 767px) {
+@media (max-width: 790px) {
   .middle-structure {
     width: 100%;
-    z-index: 3;
-    padding: 30px; } }
+    z-index: 3; } }
+@media (max-width: 530px) {
+  .-projects h2 {
+    margin-top: 90px;
+    font-size: 35px;
+    width: 100px; } }
+@media (max-width: 375px) {
+  .vertical {
+    display: none; } }
 
 /*# sourceMappingURL=main.css.map */
