--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -4,16 +4,22 @@
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center left;
-    background-color: rgba(120,207,245,0.3);*/
-    width: 100%;
-    height: 100vh;
-    overflow: hidden; 
+    background-color: rgba(120,207,245,0.3);
+    overflow:hidden;
+    */
+}
+.intro-header{
+    position: absolute;
 }
 .img{
     background-image: url(../images/finished-city-wh-back.png);
+    background-repeat: no-repeat;
+    background-size: cover;
     position: absolute;
     width: 100%;
     height: 100vh;
+    bottom:0;
+    
 }
 canvas{
     background: #000;
@@ -35,5 +41,6 @@ canvas{
     display: inline-block;
     font-size: 55px;
     font-family: "Abril Fatface", "serif";
+    text-shadow: 3px 3px rgba(0,0,0,0.3);
 }
 
