--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,7 +19,7 @@ $color: rgb(69,60,179);
 
 /******+++++++++++++++++++++++HEADER***++++++++++++++++++***/
 *{
-  
+  outline: 1px solid rgba(0,255,0,0.3);
 }
 .navbar-gr img{
     width: 150px;
@@ -181,7 +181,7 @@ section{
     background:rgba(114, 128, 178,0.5); 
     color:#000;
 }
-.projects_left, .projects_right{
+._projects_total{
     background:rgba(114, 128, 178,0.9);
 }
 /*.middle-structure-right{
@@ -206,14 +206,8 @@ section{
     margin-top: 0;
     }
 }*/
-.projects {
-    color: #000;
-    li{
-    padding: 30px 0;
-    }
-    li:hover{
-    background: rgba(69,60,179,0.3);
-    }
+.linea_projects{
+   width: 50%; 
 }
 .img-projects-github{
     margin: 25px;
@@ -267,16 +261,31 @@ section{
             height: 80px;
         }
     }
-    .logo-programs{
+    .logo_programs{
         padding: 0;
     }
 }
 
-@media (max-width:767px)
+@media (max-width:790px)
 {
     .middle-structure{
         width: 100%;
-        z-index: 3;
-        padding: 30px;
+        z-index: 3; 
     } 
+}
+
+@media (max-width:530px){
+    .-projects{
+        h2{
+           margin-top: 90px;
+            font-size: 35px;
+            width: 100px;
+            
+        }
+    }
+}
+@media (max-width:375px){
+    .vertical{
+      display: none;
+    }
 }
