--- a/sass/style.scss
+++ b/sass/style.scss
@@ -260,8 +260,9 @@ opacity:1;
 
 /******+++++++++++++++++++++++CONTACT***++++++++++++++++++***/
 .contact_phrase p{
-    font-size: 20px;
+    font-size: 30px;
     font-family: "Abril Fatface";
+    font-style: italic;
     letter-spacing: 1.5;
 }
 .contact-icon 
