--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,16 +40,12 @@ body{
             background: #fff;
         }
     }
-    a{text-decoration: none;
-        h3{
-        margin-top: 15px;
-        color: #fff;
-        font-weight: bold;
+    a{
         cursor:pointer;
-        text-shadow: 2px 2px rgba(58,54,175,0.9);
-        }
-        h3:hover{
-            background: $color_contraste;
+        img{
+           width: 35px;
+            height: 35px;
+            margin-top: 0;
         }
     }
 }
@@ -64,6 +60,9 @@ body{
         a:hover{
             background-color: $color_contraste;
         }
+    }
+    ul{background-color: $color_contraste;
+        
     }
 }
 /******+++++++++++++++++++++++GENeRAL***++++++++++++++++++***/
@@ -127,9 +126,14 @@ section{
 }
 
 /******+++++++++++++++++++++++ABOUT-ME***++++++++++++++++++***/
-.cv_grace{
-    margin-top: 25px;
+.info{
+    div{
+        h2{
+            margin-bottom: 20px;
+        }
+    }
 }
+
 .likes_about_me{
     margin: 40px 20px;
     .likes{
@@ -268,7 +272,7 @@ opacity:1;
     {
     margin: 30px 0;
     i{
-        font-size: 75px;
+        font-size: 65px;
         color: $color_contraste;
     }
     i:hover{
@@ -287,10 +291,7 @@ opacity:1;
         letter-spacing: 1.5;
         }    
     }
-    button{
-        background-color: $color_contraste;
-        margin-left: 100px;
-    }
+    
 }
 /******+++++++++++++++++++++++QUERIES***++++++++++++++++++***/
 @media (max-width:870px)
